with the second notebook

--- a/04-12-2016-PyforPoF-Part-1.ipynb
+++ b/04-12-2016-PyforPoF-Part-1.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python for PoF - Workshop Series - Part 1\n",
+    "# Python for PoF - Workshop Series - Part 1.2\n",
     "\n",
     "Vamsi Spandan\n",
     "\n",
     "Dennis Bakhuis\n",
     "\n",
     "**Reference Material** : \n",
-    "Effective Computation in Physics, Anthony Scopatz, Kathryn Huff, O'Reilly Media.\n"
+    "* Effective Computation in Physics, Anthony Scopatz, Kathryn Huff, O'Reilly Media.\n"
    ]
   },
   {
