included with blue png

--- a/PyforPoF-Part-1-2.ipynb
+++ b/PyforPoF-Part-1-2.ipynb
@@ -11,7 +11,25 @@
     "Dennis Bakhuis\n",
     "\n",
     "**Reference Material** : \n",
-    "* Effective Computation in Physics, Anthony Scopatz, Kathryn Huff, O'Reilly Media.\n"
+    "* Effective Computation in Physics, Anthony Scopatz, Kathryn Huff, O'Reilly Media.\n",
+    "* Python for Scientists, John Stewart, Cambridge.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The jupyter notebook can be used in many ways\n",
+    "1. Manage research\n",
+    "2. An excellent addition to your physical lab notebook\n",
+    "3. Share your research in a __reproducible__ and __clean__ manner\n",
+    "4. Use it for your assignment sets in classes\n",
+    "\n",
+    "__TIP:__ To run the code in a cell quickly, press Ctrl-Enter.\n",
+    "\n",
+    "__TIP:__ To quickly create a new cell below an existing one, type Ctrl-m then b.\n",
+    "Other shortcuts for making, deleting, and moving cells are in the menubar at the top of the\n",
+    "screen."
    ]
   },
   {
@@ -56,6 +74,7 @@
    "metadata": {},
    "source": [
     "### 1.2 Variables\n",
+    "Everything in python is a object. Variable is one object. \n",
     "\n",
     "Variables consist of two parts: a type and its name. Put the variable name on the left of = and its value on the right. \n",
     "\n",
@@ -632,6 +651,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can format your output as desired "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -646,15 +672,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.00 is talking, 0.0000 are listening'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = 1\n",
     "b = 0\n",
-    "\"{0} is talking, {1} are listening\".format(a,b)"
+    "\"{0:.2f} is talking, {1:.4f} are listening\".format(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.00 is talking, 0.0000 are listening'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can also control the precision of the numbers\n",
+    "\n",
+    "a = 1\n",
+    "b = 0\n",
+    "\"{0:.2f} is talking, {1:.4f} are listening\".format(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://pyformat.info/ Take a look for details on varieties of formatting."
    ]
   },
   {
