included the pdf files

--- a/PyforPoF-Part-1-2.ipynb
+++ b/PyforPoF-Part-1-2.ipynb
@@ -6,13 +6,13 @@
    "source": [
     "# Python for PoF - Workshop Series - Part 1.2\n",
     "\n",
-    "Vamsi Spandan\n",
-    "\n",
-    "Dennis Bakhuis\n",
+    "- Vamsi Spandan\n",
+    "- Dennis Bakhuis\n",
     "\n",
     "**Reference Material** : \n",
-    "* Effective Computation in Physics, Anthony Scopatz, Kathryn Huff, O'Reilly Media.\n",
-    "* Python for Scientists, John Stewart, Cambridge.\n"
+    "> Effective Computation in Physics, Anthony Scopatz, Kathryn Huff, O'Reilly Media.\n",
+    "\n",
+    "> Python for Scientists, John Stewart, Cambridge.\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First thing we will learn is commenting. In python comments are preceeded by a #. Any text appearing after a # is a comment."
+    "First thing we will learn is commenting. In python comments are preceeded by a #. Any text appearing after # is a comment."
    ]
   },
   {
@@ -66,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "this_part=\"is a comment\" # this part is not a comment"
+    "this_part=\"is not a comment\" # this part is a comment"
    ]
   },
   {
@@ -74,11 +74,9 @@
    "metadata": {},
    "source": [
     "### 1.2 Variables\n",
-    "Everything in python is a object. Variable is one object. \n",
+    "Everything in python is a object. Variable is one kind of object.\n",
     "\n",
     "Variables consist of two parts: a type and its name. Put the variable name on the left of = and its value on the right. \n",
-    "\n",
-    "Variable = Type + Name \n",
     "\n",
     "Print out the value of the variables by using `print(variable_name)` [major difference in Python 2.7]"
    ]
@@ -118,6 +116,13 @@
    "outputs": [],
    "source": [
     "type(rad)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If at anytime you want a short documentation on any function or a thing in python - run it with a ? "
    ]
   },
   {
@@ -191,7 +196,7 @@
     "\n",
     "As seen above traceback generally gives the most relevant information about where the code crashed. This is just a preliminary way of understanding where your code breaks. You can also use advanced debuggers `pdb` for extremely complex codes. Traceback error generally clears issues most of the time. \n",
     "\n",
-    "Pro tip: 'Fail early and fail often'\n",
+    "__Pro tip__: 'Fail early and fail often'\n",
     "\n",
     "Before starting to produce from your code - experiment and play around with your code to see how it handles different situations. "
    ]
@@ -314,7 +319,9 @@
     "\n",
     "Use square brackets `[]` to operate on a particular variable\n",
     "\n",
-    "Python is **zero-indexed** ! Element count starts at 0, then 1,2 etc. To get the second elements of a string you would use an index of 1. But why ?"
+    "Python is **zero-indexed** ! Element count starts at 0, then 1,2 etc. To get the second elements of a string you would use an index of 1. \n",
+    "\n",
+    "<img src=\"images/butwhy.png\" style=\"width: 100px;\"/>\n"
    ]
   },
   {
@@ -332,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Elements can also be extracted with negative indices. Negative indices count from back. The last elets is indexed -1, second to last is -2 and so on. Shorter than having to write that you want to compute the length of the string and then walk back a certain number of elements. You can anyway compute the length of a string by len(s)."
+    "Elements can also be extracted with negative indices. Negative indices count from back. The last element is indexed -1, second to last is -2 and so on. Shorter than having to write that you want to compute the length of the string and then walk back a certain number of elements. You can anyway compute the length of a string by len(s)."
    ]
   },
   {
@@ -486,7 +493,7 @@
    },
    "outputs": [],
    "source": [
-    "c[::-1] # to reverse a list"
+    "c[::-1] # to reverse a string"
    ]
   },
   {
@@ -672,22 +679,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.00 is talking, 0.0000 are listening'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1\n",
     "b = 0\n",
@@ -696,22 +692,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.00 is talking, 0.0000 are listening'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# You can also control the precision of the numbers\n",
     "\n",
@@ -797,21 +782,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fortran \n",
-      " C or C++ \n",
-      " Java\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import my_name_is_so_big as nam\n",
     "dir(nam)\n",
@@ -827,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -878,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -897,22 +872,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 'some_numbers', 'i am in a list', [1, 0, 2], [1, 'list_in_list']]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_12 = list_1+list_2\n",
     "list_12"
@@ -927,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -938,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -967,22 +931,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 3, 'i am in a list', [1, 'list_in_list'], '1_more', 3.1415]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_12[::2]"
    ]
@@ -1000,20 +953,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 2, 3)\n",
-      "(1, 2, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 1,2,3 # length 3 tuple\n",
     "print(a)\n",
@@ -1031,22 +975,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('pi', 3.14)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuple(['pi',3.14]) # tuple function simply converts anything inside to a tuple"
    ]
@@ -1068,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1086,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1104,44 +1037,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'of'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "first_dict['middle']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'y'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "axes[2]"
    ]
@@ -1155,22 +1066,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"first\" in first_dict"
    ]
@@ -1201,19 +1101,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bla is 1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bla = 1.0\n",
     "if bla == 1.0:\n",
@@ -1232,20 +1124,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bla is not 1.0\n",
-      "this part is out of if block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if bla != 2.0:\n",
     "    print('bla is not 1.0')\n",
@@ -1279,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1312,19 +1195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A bad value is given as input - 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "val = 0.0\n",
     "try:\n",
@@ -1358,22 +1233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "t-minus3\n",
-      "t-minus2\n",
-      "t-minus1\n",
-      "take-off\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in [3,2,1]:\n",
     "    print('t-minus' + str(t))\n",
@@ -1389,21 +1253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "physics\n",
-      "of\n",
-      "fluids\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in ['physics','of','fluids']:\n",
     "    print(t)"
@@ -1411,21 +1265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "2\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for t in range(0,5,2): # play around with range(start,stop,step)\n",
     "    print(t)"
@@ -1449,19 +1293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 4, 9, 16]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "yy = [t*t for t in [1,2,3,4]]\n",
     "\n",
@@ -1488,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1500,19 +1336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "With great power comes great responsibility\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "quote()"
    ]
@@ -1528,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1540,22 +1368,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "100"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(hundred())"
    ]
@@ -1569,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1581,22 +1398,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "power(2,3)"
    ]
@@ -1612,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1624,44 +1430,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3.0"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "line(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4.0"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "line(1,a=2.0)"
    ]
@@ -1675,7 +1459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1688,20 +1472,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "args : ('one', 'two')\n",
-      "kwargs : {'z': 3, 'x': 1, 'y': 2}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "variable_args('one','two',x=1,y=2,z=3)"
    ]
@@ -1717,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1733,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
