reference and pictures included

--- a/PyforPoF-Part-1-3.ipynb
+++ b/PyforPoF-Part-1-3.ipynb
@@ -114,6 +114,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Python is an excellent glue language too\n",
+    "\n",
+    "<img src=\"images/deep.png\" style=\"width: 400px;\"/>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. NumPy\n",
     "\n",
     "NumPy gets us best of both worlds !\n",
